--- a/part-3-react/getting-started-with-react.html
+++ b/part-3-react/getting-started-with-react.html
@@ -12,7 +12,12 @@
       const app = document.getElementById("app");
 
       function HomePage() {
+        const [likes, setLikes] = React.useState(0);
         const names = ["Ada Lovelace", "Grace Hopper", "Margaret Hamilton"];
+
+        function handleClick() {
+          setLikes(likes + 1);
+        }
 
         return (
           <div>
@@ -22,6 +27,8 @@
                 return <li key={name}>{name}</li>;
               })}
             </ul>
+
+            <button onClick={handleClick}>Like({likes})</button>
           </div>
         );
       }
