Moving the mouse: mouseover/out, mouseenter/leave

--- a/part-2-browser-document-events-interfaces/ui-events/moving-the-mouse-mouseover-out-mouseenter-leave/tasks/improved-tooltip-behavior.html
+++ b/part-2-browser-document-events-interfaces/ui-events/moving-the-mouse-mouseover-out-mouseenter-leave/tasks/improved-tooltip-behavior.html
@@ -6,6 +6,12 @@
     </style>
   </head>
   <body>
+    <div data-tooltip="Here is the house interior" id="house">
+      <div data-tooltip="Here is the roof" id="roof"></div>
+      <p>
+        Once upon a time there was a mother pig who had three little pigs.
+      </p>
+    </div>
     <script>
       console.log("Ola, tudo bem?");
     </script>
