Moving the mouse: mouseover/out, mouseenter/leave

--- a/part-2-browser-document-events-interfaces/ui-events/moving-the-mouse-mouseover-out-mouseenter-leave/tasks/improved-tooltip-behavior.html
+++ b/part-2-browser-document-events-interfaces/ui-events/moving-the-mouse-mouseover-out-mouseenter-leave/tasks/improved-tooltip-behavior.html
@@ -2,7 +2,15 @@
 <html>
   <head>
     <style>
+      body {
+        height: 2000px;
+      }
 
+      #house {
+        margin-top: 100px;
+        width: 400px;
+        border: 1px solid brown;
+      }
     </style>
   </head>
   <body>
