Moving the mouse: mouseover/out, mouseenter/leave

--- a/part-2-browser-document-events-interfaces/ui-events/moving-the-mouse-mouseover-out-mouseenter-leave/tasks/improved-tooltip-behavior.html
+++ b/part-2-browser-document-events-interfaces/ui-events/moving-the-mouse-mouseover-out-mouseenter-leave/tasks/improved-tooltip-behavior.html
@@ -11,6 +11,15 @@
         width: 400px;
         border: 1px solid brown;
       }
+
+      #roof {
+        width: 0;
+        height: 0;
+        border-bottom: 20px solid brown;
+        border-left: 200px solid transparent;
+        border-right: 200px solid transparent;
+        margin-top: -20px;
+      }
     </style>
   </head>
   <body>
