Moving the mouse: mouseover/out, mouseenter/leave

--- a/part-2-browser-document-events-interfaces/ui-events/moving-the-mouse-mouseover-out-mouseenter-leave/tasks/improved-tooltip-behavior.html
+++ b/part-2-browser-document-events-interfaces/ui-events/moving-the-mouse-mouseover-out-mouseenter-leave/tasks/improved-tooltip-behavior.html
@@ -20,6 +20,11 @@
         border-right: 200px solid transparent;
         margin-top: -20px;
       }
+
+      p {
+        text-align: justify;
+        margin: 10px 3px;
+      }
     </style>
   </head>
   <body>
