Movving the mouse: mouseover/out, mouseenter/leave

--- a/part-2-browser-document-events-interfaces/ui-events/moving-the-mouse-mouseover-out-mouseenter-leave/tasks/improved-tooltip-behavior.html
+++ b/part-2-browser-document-events-interfaces/ui-events/moving-the-mouse-mouseover-out-mouseenter-leave/tasks/improved-tooltip-behavior.html
@@ -52,8 +52,12 @@
         </a>
       </p>
     </div>
+    
     <script>
-      console.log("Ola, tudo bem?");
+      const house = document.getElementById("house");
+      house.onmouseover = function (e) {
+        if (!e.target.dataset.tooltip) return;
+      }
     </script>
   </body>
 </html>
