--- a/part-2-browser-document-events-interfaces/ui-events/moving-the-mouse-mouseover-out-mouseenter-leave/tasks/improved-tooltip-behavior.html
+++ b/part-2-browser-document-events-interfaces/ui-events/moving-the-mouse-mouseover-out-mouseenter-leave/tasks/improved-tooltip-behavior.html
@@ -6,6 +6,19 @@
         height: 2000px;
       }
 
+      .tooltip {
+        position: fixed;
+        z-index: 100;
+        padding: 10px 20px;
+        border: 1px solid #b3c9ce;
+        border-radius: 4px;
+        text-align: center;
+        font: italic 14px/1.3 sans-serif;
+        color: #333;
+        background-color: #fff;
+        box-shadow: 3px 3px 3px rgba(0, 0, 0, .3);
+      }
+
       #house {
         margin-top: 100px;
         width: 400px;
@@ -52,7 +65,7 @@
         </a>
       </p>
     </div>
-    
+
     <script>
       const house = document.getElementById("house");
       house.onmouseover = function (e) {
