Moving the mouse: mouseover/out, mouseenter/leave

--- a/part-2-browser-document-events-interfaces/ui-events/moving-the-mouse-mouseover-out-mouseenter-leave/tasks/improved-tooltip-behavior.html
+++ b/part-2-browser-document-events-interfaces/ui-events/moving-the-mouse-mouseover-out-mouseenter-leave/tasks/improved-tooltip-behavior.html
@@ -68,13 +68,20 @@
 
     <script>
       const house = document.getElementById("house");
-      house.onmouseover = function (e) {
+      
+      house.onmouseover = house.onmouseout = function (e) {
         const tooltip = e.target.dataset.tooltip;
         if (!tooltip) return;
+        
         const elem = document.createElement("span");
-        elem.className = "tooltip";
-        elem.append(tooltip);
-        document.body.append(elem);
+
+        if (e.type === "mouseover") {
+          elem.className = "tooltip";
+          elem.append(tooltip);
+          document.body.append(elem);
+        } else {
+          document.querySelector(".tooltip").remove();
+        }
       }
     </script>
   </body>
