Moving the mouse: mouseover/out, mouseenter/leave

--- a/part-2-browser-document-events-interfaces/ui-events/moving-the-mouse-mouseover-out-mouseenter-leave/tasks/improved-tooltip-behavior.html
+++ b/part-2-browser-document-events-interfaces/ui-events/moving-the-mouse-mouseover-out-mouseenter-leave/tasks/improved-tooltip-behavior.html
@@ -85,6 +85,15 @@
         span.append(message);
         span.className = "tooltip";
         document.body.append(span);
+
+        const coords = anchorElem.getBoundingClientRect();
+        let top = coords.top - span.offsetHeight - 5;
+
+        if (top < 0) {
+          span.style.top = coords.bottom + 5 + "px";
+        } else {
+          span.style.top = top + "px";
+        }
       }
     </script>
   </body>
