Moving the mouse: mouseover/out, mouseenter/leave

--- a/part-2-browser-document-events-interfaces/ui-events/moving-the-mouse-mouseover-out-mouseenter-leave/tasks/smart-tooltip.html
+++ b/part-2-browser-document-events-interfaces/ui-events/moving-the-mouse-mouseover-out-mouseenter-leave/tasks/smart-tooltip.html
@@ -52,7 +52,16 @@
     <div id="tooltip" hidden>Tooltip</div>
 
     <script>
-      console.log("Ola, tudo bem?");
+      "use strict";
+      class HoverIntent {
+        constructor({ sensitivity = 0.1, interval = 100, elem, over, out }) {
+          this.sensitivity = sensitivity;
+          this.interval = interval;
+          this.elem = elem;
+          this.over = over;
+          this.out = out;
+        }
+      }
     </script>
   </body>
 </html>
