Moving the mouse: mouseover/out, mouseenter/leave

--- a/part-2-browser-document-events-interfaces/ui-events/moving-the-mouse-mouseover-out-mouseenter-leave/tasks/smart-tooltip.html
+++ b/part-2-browser-document-events-interfaces/ui-events/moving-the-mouse-mouseover-out-mouseenter-leave/tasks/smart-tooltip.html
@@ -90,11 +90,13 @@
         }
       }
 
-      new HoverIntent({ 
+      const obj = new HoverIntent({ 
         elem: document.body, 
         over: function() {}, 
         out: function() {}
       });
+
+      obj.onMouseOver();
     </script>
   </body>
 </html>
