Moving the mouse: mouseover/out, mouseenter/leave

--- a/part-2-browser-document-events-interfaces/ui-events/moving-the-mouse-mouseover-out-mouseenter-leave/tasks/smart-tooltip.html
+++ b/part-2-browser-document-events-interfaces/ui-events/moving-the-mouse-mouseover-out-mouseenter-leave/tasks/smart-tooltip.html
@@ -90,13 +90,13 @@
         }
       }
 
+      const clock = document.getElementById("elem");
+
       const obj = new HoverIntent({ 
-        elem: document.body, 
+        elem: clock, 
         over: function() {}, 
         out: function() {}
       });
-
-      obj.onMouseOver();
     </script>
   </body>
 </html>
