Moving the mouse: mouseover/out, mouseenter/leave

--- a/part-2-browser-document-events-interfaces/ui-events/moving-the-mouse-mouseover-out-mouseenter-leave/tasks/smart-tooltip.html
+++ b/part-2-browser-document-events-interfaces/ui-events/moving-the-mouse-mouseover-out-mouseenter-leave/tasks/smart-tooltip.html
@@ -91,11 +91,16 @@
       }
 
       const clock = document.getElementById("elem");
+      const tooltip = document.getElementById("tooltip");
 
       const obj = new HoverIntent({ 
         elem: clock, 
-        over: function() {}, 
-        out: function() {}
+        over() {
+          tooltip.hidden = false;
+        }, 
+        out() {
+          tooltip.hidden = true;
+        }
       });
     </script>
   </body>
