Moving the mouse: mouseover/out, mouseenter/leave

--- a/part-2-browser-document-events-interfaces/ui-events/moving-the-mouse-mouseover-out-mouseenter-leave/tasks/smart-tooltip.html
+++ b/part-2-browser-document-events-interfaces/ui-events/moving-the-mouse-mouseover-out-mouseenter-leave/tasks/smart-tooltip.html
@@ -96,6 +96,8 @@
       const obj = new HoverIntent({ 
         elem: clock, 
         over() {
+          tooltip.style.top = clock.getBoundingClientRect().bottom + 5 + "px";
+          tooltip.style.left = clock.getBoundingClientRect().left + 5 + "px";
           tooltip.hidden = false;
         }, 
         out() {
