--- a/part-2-browser-document-events-interfaces/ui-events/moving-the-mouse-mouseover-out-mouseenter-leave/tasks/smart-tooltip.html
+++ b/part-2-browser-document-events-interfaces/ui-events/moving-the-mouse-mouseover-out-mouseenter-leave/tasks/smart-tooltip.html
@@ -93,7 +93,7 @@
       const clock = document.getElementById("elem");
       const tooltip = document.getElementById("tooltip");
 
-      const obj = new HoverIntent({ 
+      new HoverIntent({ 
         elem: clock, 
         over() {
           tooltip.style.top = clock.getBoundingClientRect().bottom + 5 + "px";
