Drag and drop with mouse events

--- a/part-2-browser-document-events-interfaces/ui-events/drag-n-drop-with-mouse-events/index.html
+++ b/part-2-browser-document-events-interfaces/ui-events/drag-n-drop-with-mouse-events/index.html
@@ -32,6 +32,10 @@
         ball.onmouseup = function() {
           document.removeEventListener("mousemove", onMouseMove);
         }
+
+        ball.ondragstart = function() {
+          return false;
+        }
       }
 
       // centers the ball at (pageX, pageY) coordinates
@@ -42,7 +46,6 @@
 
       function onMouseMove(e) {
         moveTo(e.pageX, e.pageY);
-        console.log(e.pageX, e.pageY);
       }
     </script>
   </body>
