Drag and drop with mouse events

--- a/part-2-browser-document-events-interfaces/ui-events/drag-n-drop-with-mouse-events/index.html
+++ b/part-2-browser-document-events-interfaces/ui-events/drag-n-drop-with-mouse-events/index.html
@@ -1,12 +1,5 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <style>
-      #ball {
-        /* cursor: grabbing; */
-      }
-    </style>
-  </head>
   <body>
     <img src="https://en.js.cx/clipart/ball.svg" id="ball">
 
@@ -30,6 +23,7 @@
 
         // (3) drop the ball, remove unneeded handlers
         ball.onmouseup = function() {
+          ball.style.cursor = "auto";
           document.removeEventListener("mousemove", onMouseMove);
         }
 
