--- a/part-2-browser-document-events-interfaces/ui-events/drag-n-drop-with-mouse-events/index.html
+++ b/part-2-browser-document-events-interfaces/ui-events/drag-n-drop-with-mouse-events/index.html
@@ -2,6 +2,10 @@
 <html>
   <head>
     <style>
+      body {
+        background-color: #F0F2F5;
+      }
+      
       .dragging {
         position: absolute;
         z-index: 1000;
