Moving the mouse: mouseover/out, mouseenter/leave

--- a/part-2-browser-document-events-interfaces/ui-events/moving-the-mouse-mouseover-out-mouseenter-leave/tasks/smart-tooltip.html
+++ b/part-2-browser-document-events-interfaces/ui-events/moving-the-mouse-mouseover-out-mouseenter-leave/tasks/smart-tooltip.html
@@ -73,12 +73,12 @@
           elem.addEventListener("mouseout", this.onMouseOut);
         }
 
-        onMouseOver() {
-          console.log(this);
+        onMouseOver(e) {
+          console.log(e.type);
         }
 
-        onMouseOut() {
-          console.log(this);
+        onMouseOut(e) {
+          console.log(e.type);
         }
 
         onMouseMove() {
