Moving the mouse: mouseover/out, mouseenter/leave

--- a/part-2-browser-document-events-interfaces/ui-events/moving-the-mouse-mouseover-out-mouseenter-leave/tasks/smart-tooltip.html
+++ b/part-2-browser-document-events-interfaces/ui-events/moving-the-mouse-mouseover-out-mouseenter-leave/tasks/smart-tooltip.html
@@ -85,8 +85,8 @@
           console.log(this);
         }
 
-        trackSpeed() {
-          console.log(this);
+        trackSpeed(e) {
+          console.log(e);
         }
       }
 
