Moving the mouse: mouseover/out, mouseenter/leave

--- a/part-2-browser-document-events-interfaces/ui-events/moving-the-mouse-mouseover-out-mouseenter-leave/tasks/smart-tooltip.html
+++ b/part-2-browser-document-events-interfaces/ui-events/moving-the-mouse-mouseover-out-mouseenter-leave/tasks/smart-tooltip.html
@@ -51,6 +51,8 @@
 
     <div id="tooltip" hidden>Tooltip</div>
 
+    <h1 style="color: red; margin-top: 60px;">Ainda por terminar!!!</h1>
+
     <script>
       "use strict";
       class HoverIntent {
