Drag and drop with mouse events

--- a/part-2-browser-document-events-interfaces/ui-events/drag-n-drop-with-mouse-events/index.html
+++ b/part-2-browser-document-events-interfaces/ui-events/drag-n-drop-with-mouse-events/index.html
@@ -2,7 +2,7 @@
 <html>
   <body>
     <h2>Drag and drop algorithm</h2>
-    
+    <img src="https://en.js.cx/clipart/ball.svg" id="ball">
     <script>
       
       console.log("Ola, tudo bem?");
