--- a/part-2-browser-document-events-interfaces/ui-events/drag-n-drop-with-mouse-events/index.html
+++ b/part-2-browser-document-events-interfaces/ui-events/drag-n-drop-with-mouse-events/index.html
@@ -1,11 +1,43 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <style>
+      .dragging {
+        position: absolute;
+        z-index: 1000;
+      }
+      
+      .grabbing {
+        opacity: 0.6;
+        cursor: grabbing;
+      }
+    </style>
+  </head>
   <body>
     <h2>Drag and drop algorithm</h2>
     <img src="https://en.js.cx/clipart/ball.svg" id="ball">
+
     <script>
-      
-      console.log("Ola, tudo bem?");
+      const ball = document.getElementById("ball");
+
+      ball.onmousedown = function(e) {
+        // (1) prepare to moving: make absolute and on top by z-index
+        ball.className = "dragging grabbing";
+
+        // move it out of any current parents directly into body
+        // to make it positioned relative to the body
+        document.body.append(ball);
+
+        // (2) move the ball on mousemove
+        document.addEventListener("mousemove", onMouseMove);
+
+        ball.onmouseup = function() {
+          ball.classList.remove("grabbing");
+          document.removeEventListener("mousemove", onMouseMove);
+        };
+      };
+
+      function onMouseMove(e) {}
     </script>
   </body>
 </html>
