Drag and drop with mouse events

--- a/part-2-browser-document-events-interfaces/ui-events/drag-n-drop-with-mouse-events/index.html
+++ b/part-2-browser-document-events-interfaces/ui-events/drag-n-drop-with-mouse-events/index.html
@@ -48,6 +48,7 @@
         }
       };
 
+      // Quando clicas depois de realizar o drag and drop ele deixa a bola:
       // function onMouseMove(e) {
       //   moveTo(e.pageX, e.pageY);
       // }
