Drag and drop with mouse events

--- a/part-2-browser-document-events-interfaces/ui-events/drag-n-drop-with-mouse-events/index.html
+++ b/part-2-browser-document-events-interfaces/ui-events/drag-n-drop-with-mouse-events/index.html
@@ -17,6 +17,8 @@
     <h2>Drag and drop algorithm</h2>
     <img src="https://en.js.cx/clipart/ball.svg" id="ball">
 
+    <h2>Correct positioning</h2>
+
     <script>
       const ball = document.getElementById("ball");
 
