--- a/part-2-browser-document-events-interfaces/ui-events/drag-n-drop-with-mouse-events/index.html
+++ b/part-2-browser-document-events-interfaces/ui-events/drag-n-drop-with-mouse-events/index.html
@@ -17,7 +17,7 @@
     <h2>Drag and drop algorithm</h2>
     <img src="https://en.js.cx/clipart/ball.svg" id="ball">
 
-    <h2>Correct positioning</h2>
+    <h2>Potential drop targets (droppables)</h2>
 
     <script>
       const ball = document.getElementById("ball");
