Drag and drop with mouse events

--- a/part-2-browser-document-events-interfaces/ui-events/drag-n-drop-with-mouse-events/potential-drop-targets-droppables-2.html
+++ b/part-2-browser-document-events-interfaces/ui-events/drag-n-drop-with-mouse-events/potential-drop-targets-droppables-2.html
@@ -1,6 +1,21 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <style>
+      #gate {
+        cursor: pointer;
+        margin-bottom: 100px;
+        width: 83px;
+        height: 46px;
+        display: block;
+      }
+    </style>
+  </head>
   <body>
+    <p>Drag the ball.</p>
+    <img src="https://en.js.cx/clipart/soccer-gate.svg" id="gate" class="droppable">
+    <img src="https://en.js.cx/clipart/ball.svg" id="ball">
+
     <script>
       console.log("Ola, tudo bem?");
     </script>
